syntax = "proto3";
package api;
option go_package = "api";

import "packet.proto";

message DeliverRequest{
  string id = 1;
  repeated string userLabels = 2;
  Message message = 3;
}

message DeliverReply{
}

service BrokerService{
  rpc Deliver(DeliverRequest) returns (DeliverReply) {}
}