syntax = "proto3";
package api;
option go_package = "/api";

import "packet.proto";

service BusinessService{
  rpc Login(LoginRequest) returns (LoginReply) {}
  rpc Logout(LogoutRequest) returns (LogoutReply) {}
}