syntax = "proto3";
package api;
option go_package = "/api";

import "packet.proto";

service RouterService{
  rpc Route(Message) returns (Message) {}
}